--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h3>Explanation</h3>
                 <p>This test is meant for people with previous knowledge of socionics but who are still confused about their type. Instead of a series of affirmations about characteristics, you'll directly assess whether you fit socionics concepts or not.</p>
                 <p>The test comes from the idea that your socionics type is the one whose traits from diverse parts of socionics you most identify with. In this case, the traits are from model A and reinin. I would also like to include other things such as cognitive styles, but I would say they require some reading and self reflection.</p>
-                <p>You don't need to fill the entire test for it to display results. Give an answer only to things agree with, and leave blank what you are in doubt about.</p>
+                <p>You don't need to fill the entire test. The idea is to give an answer only to things agree with, and leave blank what you are in doubt about.</p>
                 <p>The scores are directly calculated. For example, marking "strong Ti" will give one point to every type with strong Ti (ILE, LII, SLE, LSI).</p>
                 <p>Links everywhere in this bitch.</p>
                 <h3><a href="http://www.wikisocion.net/en/index.php?title=Model_A">Model A</a></h3>
@@ -37,12 +37,12 @@
                                 <template v-for="dicho in model_a_list">
                                     <td>
                                         <div class="form-check">
-                                            <input class="form-check-input model-a" type="radio" value=0 v-bind:name="dicho[0] + dicho[1] + e" @click="check_model_a(e, dicho[0])">
+                                            <input class="form-check-input model-a" type="checkbox" value=0 v-bind:name="dicho[0] + dicho[1] + e" @click="check_model_a($event, e, dicho[0])">
                                         </div>
                                     </td>
                                     <td>
                                         <div class="form-check">
-                                            <input class="form-check-input model-a" type="radio" value=0 v-bind:name="dicho[0] + dicho[1] + e" @click="check_model_a(e, dicho[1])">
+                                            <input class="form-check-input model-a" type="checkbox" value=0 v-bind:name="dicho[0] + dicho[1] + e" @click="check_model_a($event, e, dicho[1])">
                                         </div>
                                     </td>
                                 </template>
@@ -63,12 +63,12 @@
                         </td>
                         <td>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" value=0 v-bind:name="dicho[0] + dicho[1]" @click="check_reinin(dicho[0])">
+                                <input class="form-check-input" type="checkbox" value=0 v-bind:name="dicho[0] + dicho[1]" @click="check_reinin($event, dicho[0])">
                             </div>
                         </td>
                         <td>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" value=0 v-bind:name="dicho[0] + dicho[1]" @click="check_reinin(dicho[1])">
+                                <input class="form-check-input" type="checkbox" value=0 v-bind:name="dicho[0] + dicho[1]" @click="check_reinin($event, dicho[1])">
                             </div>
                         </td>
                         <td>
