--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h2>Socionics Test</h2>
                 <h3>Explanation</h3>
                 <p>This test is meant for people with previous knowledge of socionics but who are still confused about their type. Instead of a series of affirmations about characteristics, you'll directly assess whether you fit socionics concepts or not.</p>
-                <p>The test comes from the idea that your socionics type is the one whose traits from diverse parts of socionics you most identify with. In this case, the traits are from model A and reinin. I would also like to include other things such as cognitive styles, but I would say they require some reading and self reflection.</p>
+                <p>The test comes from the idea that your socionics type is the one whose traits from diverse parts of socionics you most identify with.</p>
                 <p>You don't need to fill the entire test. The idea is to give an answer only to things agree with, and leave blank what you are in doubt about.</p>
                 <p>The scores are directly calculated. For example, marking "strong Ti" will give one point to every type with strong Ti (ILE, LII, SLE, LSI).</p>
                 <p>Links everywhere in this bitch.</p>
