--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <title>Socionics Test</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <style>
             .form-check {margin: none;}
@@ -13,13 +14,14 @@
             <div></div>
             <div class="col-sm" style="max-width: 480px;" id="app">
                 <h2>Socionics Test</h2>
-                <h3>Explanation</h3>
-                <p>This test is meant for people with previous knowledge of socionics but who are still confused about their type. Instead of a series of affirmations about characteristics, you'll directly assess whether you fit socionics concepts or not.</p>
+                <h4>Explanation</h4>
+                <p>This test is meant for people with previous knowledge of socionics but who are still confused about their type. Instead of a series of affirmations about characteristics, you'll directly assess whether you fit socionics concepts or not. Aka, this is just automatized self-typing.</p>
+                <p>Beginners at socionics may use the test as a basis to get to know the system.</p>
                 <p>The test comes from the idea that your socionics type is the one whose traits from diverse parts of socionics you most identify with.</p>
                 <p>You don't need to fill the entire test. The idea is to give an answer only to things agree with, and leave blank what you are in doubt about.</p>
                 <p>The scores are directly calculated. For example, marking "strong Ti" will give one point to every type with strong Ti (ILE, LII, SLE, LSI).</p>
                 <p>Links everywhere in this bitch.</p>
-                <h3><a href="http://www.wikisocion.net/en/index.php?title=Model_A">Model A</a></h3>
+                <h4><a href="http://www.wikisocion.net/en/index.php?title=Model_A">Model A</a></h4>
                 <table class="table-sm">
                     <thead>
                         <tr>
@@ -50,8 +52,8 @@
                         </template>
                     </tbody>
                 </table>
-        <br></br>
-        <h3><a href="http://www.wikisocion.net/en/index.php?title=Reinin">Reinin Dichotomies</a></h3>
+        <br>
+        <h4><a href="http://www.wikisocion.net/en/index.php?title=Reinin">Reinin Dichotomies</a></h4>
         <table class="table-sm">
             <thead>
             </thead>
@@ -78,8 +80,26 @@
                 </template>
             </tbody>
         </table>
-        </br>
-        <h3>Score (max: 27)</h3>
+        <br>
+        <h4><a href="http://www.wikisocion.net/en/index.php?title=Quadra">Quadras</a></h4>
+        <template v-for="(val, qua) in quadras">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value=0 v-bind:name="qua" @click="check_group($event, quadras, qua)">
+                    <label><a v-bind:href="'http://www.wikisocion.net/en/index.php?title=' + qua">{{ qua }}</a></label>
+                        
+                </div>
+        </template>
+        <br>
+        <h4><a href="http://www.wikisocion.net/en/index.php?title=Cognitive_Styles">Cognitive styles</a></h4>
+        <template v-for="(val, cs) in cog_styles">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value=0 v-bind:name="cs" @click="check_group($event, cog_styles, cs)">
+                <label>{{ cs }}</label>
+                    
+            </div>
+    </template>
+        <br>
+        <h4>Score (max: 29)</h4>
             <table class="table-sm">
                 <thead>
                     </thead>
